app/website-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocdrocks
  name: website-service
spec:
  type: NodePort
  ports:
    - port: 8888
      nodePort: 30888
      targetPort: 8888
      protocol: TCP
  selector:
    app: argocd-rocks
